# sand

./: .gitignore  CMakeLists.txt
inc/: cell.h  world.h
src/: cell.c  main.c  world.c
